[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/options_menu/options_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="options_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center_container" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 602.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_container" type="VBoxContainer" parent="center_container"]
margin_left = 312.0
margin_top = 251.0
margin_right = 712.0
margin_bottom = 351.0
custom_constants/separation = 20

[node name="options_title" type="Label" parent="center_container/vbox_container"]
margin_right = 400.0
margin_bottom = 14.0
text = "Options"
align = 1

[node name="sound_submenu" type="VBoxContainer" parent="center_container/vbox_container"]
margin_top = 34.0
margin_right = 400.0
margin_bottom = 60.0

[node name="sound_title" type="Label" parent="center_container/vbox_container/sound_submenu"]
margin_right = 400.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.341176, 0.933333, 0.960784, 1 )
text = "Sound"
align = 1

[node name="toggle_sound_button" type="Button" parent="center_container/vbox_container/sound_submenu"]
margin_top = 6.0
margin_right = 400.0
margin_bottom = 26.0
rect_min_size = Vector2( 400, 0 )
text = "Sound mode"

[node name="return_button" type="Button" parent="center_container/vbox_container"]
margin_top = 80.0
margin_right = 400.0
margin_bottom = 100.0
text = "Return to main menu"
[connection signal="pressed" from="center_container/vbox_container/sound_submenu/toggle_sound_button" to="." method="_on_toggle_sound_button_pressed"]
[connection signal="pressed" from="center_container/vbox_container/return_button" to="." method="_on_return_button_pressed"]
